testdata/baselines/reference/submodule/conformance/mixinAccessors4.errors.txt
mixinAccessors4.ts(19,7): error TS2611: 'myName' is defined as a property in class 'Mixin.B & A', but is overridden here in 'C' as an accessor.


==== mixinAccessors4.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/44938
    
    class A {
      constructor(...args: any[]) {}
      get myName(): string {
        return "A";
      }
    }
    
    function Mixin<T extends typeof A>(Super: T) {
      return class B extends Super {
        get myName(): string {
          return "B";
        }
      };
    }
    
    class C extends Mixin(A) {
      get myName(): string {
          ~~~~~~
!!! error TS2611: 'myName' is defined as a property in class 'Mixin.B & A', but is overridden here in 'C' as an accessor.
        return "C";
      }
    }
    